src/objects/loan__Contract_Pre_Paid_Fee__c.object
<CustomObject>
    <description>This is the junction object on Fee and contract.</description>
    <fields>
        <fullName>loan__Add_Fee_to_Loan_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Fee to Loan Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amortize_Balance__c</fullName>
        <label>Amortize Balance</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Paid Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Pre Paid Fees Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Pre-Paid Fee</relationshipLabel>
        <relationshipName>Pre_Paid_Fee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>loan__Fee__c.loan__Time_of_charge__c</field>
                <operation>equals</operation>
                <value>Pre-Paid Fees</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Pre-Paid Fee</relationshipLabel>
        <relationshipName>Contract_Pre_Paid_Fee</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Adjusted in this disbursal transaction</inlineHelpText>
        <label>Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipLabel>Pre-Paid Fees</relationshipLabel>
        <relationshipName>Pre_Paid_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pre-Paid Fee</label>
    <nameField>
        <displayFormat>CPP-{00000000}</displayFormat>
        <label>Pre-Paid Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Paid Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Fee_Amount_Limit_Check</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Amount__c &gt; loan__Fee_Type__r.loan__Maximum_Amount__c, loan__Amount__c &lt; loan__Fee_Type__r.loan__Minimum_Amount__c)</errorConditionFormula>
        <errorMessage>The Pre-Paid Fee Amount should fall between the Limits specified in the Fee setup.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Fee_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Pre-Paid Fee Amount should be greater than or equal to 0.</errorMessage>
    </validationRules>
</CustomObject>